testsuite/escript/classes/fail-super-unconstructable.err
fail-super-unconstructable.src:11:1: error: In construction of 'Foo::super': Unable to create argument from default for parameter 'arg0'.